--- a/CPPSamples.vcxproj
+++ b/CPPSamples.vcxproj
@@ -143,6 +143,10 @@
     <ClCompile Include="Sample1_7.cpp" />
     <ClCompile Include="Sample1_8.cpp" />
     <ClCompile Include="Sample1_9.cpp" />
+    <ClCompile Include="Sample2_1.cpp" />
+    <ClCompile Include="Sample2_2.cpp" />
+    <ClCompile Include="Sample2_3.cpp" />
+    <ClCompile Include="Sample2_4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sample1_1.h" />
@@ -156,6 +160,10 @@
     <ClInclude Include="Sample1_7.h" />
     <ClInclude Include="Sample1_8.h" />
     <ClInclude Include="Sample1_9.h" />
+    <ClInclude Include="Sample2_1.h" />
+    <ClInclude Include="Sample2_2.h" />
+    <ClInclude Include="Sample2_3.h" />
+    <ClInclude Include="Sample2_4.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
