--- a/CPPSamples.vcxproj
+++ b/CPPSamples.vcxproj
@@ -130,6 +130,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Sample3_17.cpp" />
     <ClCompile Include="Sample1_10.cpp" />
     <ClCompile Include="Sample1_11.cpp" />
     <ClCompile Include="Sample1_12.cpp" />
@@ -154,6 +155,16 @@
     <ClCompile Include="Sample2_8.cpp" />
     <ClCompile Include="Sample2_9.cpp" />
     <ClCompile Include="Sample3_1.cpp" />
+    <ClCompile Include="Sample3_10.cpp" />
+    <ClCompile Include="Sample3_11.cpp" />
+    <ClCompile Include="Sample3_11_1.cpp" />
+    <ClCompile Include="Sample3_11_1.h" />
+    <ClCompile Include="Sample3_12.cpp" />
+    <ClCompile Include="Sample3_13.cpp" />
+    <ClCompile Include="sample3_14.cpp" />
+    <ClCompile Include="Sample3_15.cpp" />
+    <ClCompile Include="Sample3_16.cpp" />
+    <ClCompile Include="sample3_17.h" />
     <ClCompile Include="Sample3_2.cpp" />
     <ClCompile Include="Sample3_2.h" />
     <ClCompile Include="Sample3_3.cpp" />
@@ -166,6 +177,13 @@
     <ClCompile Include="Sample3_9.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sample3_10.h" />
+    <ClInclude Include="Sample3_11.h" />
+    <ClInclude Include="Sample3_12.h" />
+    <ClInclude Include="Sample3_13.h" />
+    <ClInclude Include="Sample3_14.h" />
+    <ClInclude Include="Sample3_15.h" />
+    <ClInclude Include="Sample3_16.h" />
     <ClInclude Include="Sample3_9.h" />
     <ClInclude Include="Sample3_6.h" />
     <ClInclude Include="Sample1_1.h" />
@@ -194,6 +212,9 @@
     <ClInclude Include="Sample3_5.h" />
     <ClInclude Include="Sample3_7.h" />
     <ClInclude Include="Sample3_8.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
